--- a/bube/bube-web/src/main/webapp/index.xhtml
+++ b/bube/bube-web/src/main/webapp/index.xhtml
@@ -4,13 +4,29 @@
     xmlns:p="http://primefaces.org/ui">
 
     <h:head>
+    	<title>BusUY</title>
     </h:head>
 
-    <h:body>
-       <h:form rendered="#{administrador}">
+    <h:body style="margin: 0px;">
+    <style>
+    	.logout{
+    		border: 0px;
+    		background: transparent;
+    		color: blue;
+    		cursor: pointer;
+    	}
+    </style>
+		<h:form rendered="#{administrador}">
+        	<p:menubar>
+            	<f:facet name="options">
+                	<h:commandButton action="#{IniciarSesion.cerrarSesion()}" value="Logout" styleClass="logout"/>
+            	</f:facet>
+        	</p:menubar>
 			<strong>HOLA ADMIN!</strong> 
 		</h:form>
 		<h:form rendered="#{!administrador}">
+			<p:menubar>
+        	</p:menubar>
 			<strong>HOLA VISITANTE!</strong> 
 		</h:form>
     </h:body>
